<resources>
    <string name="app_name">Catch\'Em</string>
    <string name="main_menu">Main Menu</string>
    <string name="game_title">Gotta Catch Them All!</string>
    <string name="team_member_names"><![CDATA[Created by:\nArtun Cimensel & Thomas (Hyeonyoung) Park]]></string>
    <string name="start_game">Start Game</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="num_wild_pokemon_option">%1$d wild pokemon</string>
    <string name="num_rows_cols_option">%1$d Rows x %2$d columns</string>
    <string name="select_board_size">Select Board Size</string>
    <string name="select_number_of_wild_pokemon">Select Number of Wild Pokemon</string>
    <string name="save_settings">Save Settings</string>
    <string name="numberOfTimesScanned"> # Scans Used: %1$d </string>
    <string name="numberOfPokemonFound"> Found %1d of %2d Pokemon </string>
    <string name="updatePokemonNumbers"> %1d </string>
    <string name="bg_welcome_link">bg_welcome - http://happyapple.us/minimalist-pokemon-wallpapers</string>
    <string name="bg_main_link">bg_main - https://mobile-ar.reality.news/how-to/what-do-leaves-mean-pokemon-go-0172288/</string>
    <string name="bg_game_link">bg_game - https://www.pixilart.com/art/placeholder-grass-tile-b9177cda4f41c1b</string>
    <string name="bg_options_link">bg_options - https://i.imgur.com/pQIpSir.jpg</string>
    <string name="bg_help_link">bg_help - https://wall.alphacoders.com/big.php?i=127671</string>
    <string name="rand_bulbasaur_link">rand_bulbasaur - https://piq.codeus.net/picture/109633/bulbasaur</string>
    <string name="rand_butterfree_link">rand_butterfree - https://www.pngaaa.com/detail/833748</string>
    <string name="rand_caterpie_link">rand_caterpie - https://www.pngkit.com/bigpic/u2w7q8r5u2r5o0a9/</string>
    <string name="rand_charmander_link">rand_charmander - https://www.pngkey.com/maxpic/u2e6e6y3r5w7i1y3/</string>
    <string name="rand_eevee_link">rand_eevee - http://pixelartmaker.com/art/7d4ef17de2bbbd3</string>
    <string name="rand_pidgey_link">rand_pidgey - http://pixelartmaker.com/art/93376e38012f443</string>
    <string name="rand_pikachu_link">rand_pikachu - https://www.pngkit.com/bigpic/u2r5y3y3a9t4e6w7/</string>
    <string name="rand_porygon_link">rand_porygon - https://www.pngkit.com/bigpic/u2w7o0q8t4q8w7q8/</string>
    <string name="rand_squirtle_link">rand_squirtle - http://pixelartmaker.com/art/1045646165b93e9</string>
    <string name="rand_weedle_link">rand_weedle - http://pixelartmaker.com/art/e704915cfae5573</string>
    <string name="battle_hall_music_link">battle_hall_music - https://www.zophar.net/music/nintendo-ds-2sf/pokemon-platinum</string>
    <string name="pokemon_sound_link">pokemon_sound - https://play.pokemonshowdown.com/audio/cries/chansey.mp3</string>
    <string name="scan_sound_link">scan_sound - http://soundbible.com/1682-Robot-Blip.html</string>
    <string name="appicon_pokeball_link">appicon_pokeball - http://www.pngmart.com/files/2/Pokeball-PNG-Photos.png</string>
    <string name="loading_pokeball_gif_link">loading_pokeball_gif - https://gfycat.com/dampspanishcleanerwrasse</string>
    <string name="tile_tall_grass_link">tile_tall_grass - https://www.deviantart.com/rayquaza-dot/art/Pokemon-Platinum-Grass-Autotile-293299604</string>
    <string name="goal_description">You want to be the very best, like no one ever was.\nTo catch them is your real test, to train them is your cause!\n\nYou are a young new trainer trying to catch Pokemon. To help your quest, \nProfessor Oak has installed a scanner in your Pokedex. Your goal is to find \nand catch all the Pokemon without depending on the scanner too much \nand using it as little as possible.\n</string>
    <string name="goal_header">Goal of the Game:</string>
    <string name="instruction_header">How to Play:</string>
    <string name="coursehome_header">CMPT 276 Course Home Page:</string>
    <string name="coursehome_link">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home\n</string>
    <string name="citations_header">Citations for Used Resources:</string>
    <string name="instruction_description">1. As the game starts the game board will be filled with unexplored grass. \n\n2. The trainer then chooses a patch of grass to explore. If there is a wild Pokemon \nbehind it, the trainer will catch the Pokemon, without the scanner triggering! \n\n3. When a patch of grass without a wild Pokemon is explored, the Pokedex will \nautomatically scan the row and column of that grass. This tells the trainer the number \nof Pokemon left in the unexplored rows and columns of the scanned patch of grass. \n\n4. The trainer may also choose to manually scan a location where a wild Pokemon \nwas already caught. This is done by tapping the location where you have caught \nthe Pokemon again. \n\n5. Using the information from the Pokedex scans, the trainer can make informed \nchoices about which patches of grass to explore. \n\n6. As the trainer finds more Pokemon, the Pokedex\'s revolutionary technology \nautomatically updates the count of uncaught Pokemon in the patches of grass \nthat were scanned. \n\n7. Trainer continues exploring until all Pokemon are found. \n\n8. Once the trainer has caught all wild Pokemon in the area, the game is over. \nThe challenge is catching all the Pokemon with the fewest scans. This will make \nProfessor Oak very proud!\n</string>
    <string name="btn_start_img_link">btn_start_img - https://www.clipartmax.com/download/m2H7K9m2K9m2A0A0_awesome-pokemon-pictures-free-download-pikachu-icon-pikachu-png-icon/</string>
    <string name="btn_option_img_link">btn_option_img - https://favpng.com/png_download/fqpvSFMW</string>
    <string name="btn_help_img_link">bnt_help_img - https://www.pngaaa.com/detail/259213</string>
    <string name="return_btn">Return</string>
    <string name="congrats_you_caught_all_pokemons">Congrats! You Caught All Pokemons!</string>
    <string name="reset_records">Reset Records</string>
    <string name="number_of_games_played"># of games played: %1$d</string>
    <string name="high_score">\High Score: %1$d\</string>
    <string name="no_high_score">No High Score</string>
    <string name="about_text">Application Created By:</string>
    <string name="group_member_names">Artun Cimensel\nThomas (Hyeonyoung) Park\n</string>
    <string name="reset_toast">Records have been reset!</string>

</resources>