<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HelpScreen"
    android:background="@drawable/bg_help"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="136dp"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:text="@string/goal_header"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/goal_description"
                android:textColor="#DDDDDD" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/instruction_header"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/instruction_description"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/about_text"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/group_member_names" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/coursehome_header"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/coursehome_link"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/citations_header"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/bg_welcome_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/bg_main_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/bg_game_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/bg_options_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/bg_help_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_bulbasaur_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_butterfree_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_caterpie_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_charmander_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_eevee_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_pidgey_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_pikachu_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_porygon_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_squirtle_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/rand_weedle_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/battle_hall_music_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/pokemon_sound_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/scan_sound_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/appicon_pokeball_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/loading_pokeball_gif_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/tile_tall_grass_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/btn_start_img_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#DDDDDD"
                android:text="@string/btn_option_img_link"
                android:autoLink="web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp"
                android:textColor="#DDDDDD"
                android:text="@string/btn_help_img_link"
                android:autoLink="web"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>