<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenu"
    android:background="@drawable/bg_main"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:text="@string/game_title"
        android:textAllCaps="true"
        android:textColor="#FFC107"
        android:textScaleX="1.1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btnStartGame"

        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btnOptions"
        app:layout_constraintEnd_toEndOf="@+id/btnOptions"
        app:layout_constraintStart_toStartOf="@+id/btnOptions"
        app:srcCompat="@drawable/btn_start_img" />

    <ImageButton
        android:id="@+id/btnOptions"

        android:layout_width="200dp"
        android:layout_height="50dp"


        android:layout_marginEnd="70dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias=".6"
        app:srcCompat="@drawable/btn_option_img" />

    <ImageButton

        android:id="@+id/btnHelp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"

        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/btnOptions"
        app:layout_constraintStart_toStartOf="@+id/btnOptions"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions"
        app:srcCompat="@drawable/btn_help_img" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/start_game"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnStartGame"
        app:layout_constraintStart_toStartOf="@+id/btnStartGame"
        app:layout_constraintTop_toTopOf="@+id/btnStartGame"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/options"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnOptions"
        app:layout_constraintStart_toStartOf="@+id/btnOptions"
        app:layout_constraintTop_toTopOf="@+id/btnOptions"
        app:layout_constraintVertical_bias="0.419" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/help"
        android:textColor="#090909"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHelp"
        app:layout_constraintStart_toStartOf="@+id/btnHelp"
        app:layout_constraintTop_toTopOf="@+id/btnHelp"
        app:layout_constraintVertical_bias="0.451" />


</androidx.constraintlayout.widget.ConstraintLayout>