<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OptionsScreen"
    android:background="@drawable/bg_options" >


    <RadioGroup
        android:id="@+id/radio_group_num_wild_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_number_of_wild_pokemon"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <ImageButton
        android:id="@+id/save_options"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:padding="0dp"
        android:scaleType="fitXY"

        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9"
        app:srcCompat="@drawable/btn_empty_img" />

    <ImageButton
        android:id="@+id/btnResetRecords"
        android:layout_width="101dp"
        android:layout_height="37dp"

        android:padding="0dp"


        android:scaleType="fitXY"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9"
        app:srcCompat="@drawable/btn_empty_img_red" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_board_size"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <RadioGroup
        android:id="@+id/radio_group_num_rows_cols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/save_settings"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/save_options"
        app:layout_constraintEnd_toEndOf="@+id/save_options"
        app:layout_constraintStart_toStartOf="@+id/save_options"
        app:layout_constraintTop_toTopOf="@+id/save_options" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/reset_records"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/btnResetRecords"
        app:layout_constraintEnd_toEndOf="@+id/btnResetRecords"
        app:layout_constraintStart_toStartOf="@+id/btnResetRecords"
        app:layout_constraintTop_toTopOf="@+id/btnResetRecords" />

</androidx.constraintlayout.widget.ConstraintLayout>