<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageFirstEevee"
            android:layout_width="131dp"
            android:layout_height="fill_parent"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome_1st_eevee" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imageSecondEevee"
            android:layout_width="131dp"
            android:layout_height="fill_parent"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome_2nd_eevee" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imageThirdEevee"
            android:layout_width="131dp"
            android:layout_height="fill_parent"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome_3rd_eevee" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imageFourthEevee"
            android:layout_width="131dp"
            android:layout_height="fill_parent"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome_4th_eevee" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/button_gotomain"
        android:layout_width="328dp"
        android:layout_height="65dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:text="@string/main_menu"

        app:layout_constraintBottom_toBottomOf="@+id/loading_pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loading_pokeball"
        app:layout_constraintVertical_bias="1.0"


        app:srcCompat="@drawable/btn_empty_img" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_pokeball"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/loading_pokeball_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:text="@string/game_title"
        android:textAllCaps="true"
        android:textColor="#FFC107"
        android:textScaleX="1.1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#787878"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/team_member_names"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/main_menu"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_gotomain"
        app:layout_constraintEnd_toEndOf="@+id/button_gotomain"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/button_gotomain"
        app:layout_constraintTop_toTopOf="@+id/button_gotomain"
        app:layout_constraintVertical_bias="0.526" />

</androidx.constraintlayout.widget.ConstraintLayout>